Work - Fix - Project Link Overlap Nav

--- a/app/sections/Project/projects.module.css
+++ b/app/sections/Project/projects.module.css
@@ -13,7 +13,6 @@
   flex-direction: column;
   margin-bottom: 80px;
   cursor: pointer;
-  position: relative;
 }
 
 .info {
@@ -59,16 +58,8 @@
 }
 
 .proj_link {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  display: block;
   text-decoration: none;
-  z-index: 1;
-  background-color: #fff;
-  opacity: 0;
-  filter: alpha(opacity=1);
 }
 
 .button {
